--- a/_posts/2022-10-06-vite.md
+++ b/_posts/2022-10-06-vite.md
@@ -19,10 +19,8 @@ Vite는 프랑스어로 빠르다라는 뜻이 있다. 웹 어플리케이션의
 
 보통 리액트를 초기 구성할 때, 자바스크립트로 이루어진 **Webpack**을 사용한다. 이 **Webpack**과 같은 JS 기반의 도구들은 프로젝트의 규모가 커질수록 번들크기가 커지며 빌드 속도가 점점 오래 걸리기 시작한다. 그리고 **HMR**(Hot Module Replacement)을 사용하더라도 적용되는데에 오랜 시간이 걸린다.
 
-![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/71789156-c352-42fc-af7c-cba21d9a0df0/Untitled.png)
-
-![출처 - Vite 공식 문서](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/2b37729c-e4eb-46b9-86e2-79071cbe17f7/Untitled.png)
-
+<img src="/vite1.png" alt="Vite">
+<img src="/vite2.png" alt="Vite">
 출처 - Vite 공식 문서
 
 # 🔨 Vite로 React 프로젝트 구성해보기
@@ -52,8 +50,7 @@ $ yarn create vite project-name --template react-ts
 | lit        | lit-ts     |
 | svelte     | svelte-ts  |
 
-![설치 후, 프로젝트 구조](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/ab2bd6a4-983f-45ad-94d0-4e7bace9f80a/Untitled.png)
-
+<img src="/vite3.png" alt="Vite">
 설치 후, 프로젝트 구조
 
 `create-vite` 를 통해 설치 된 프로젝트 구조를 살펴보면, `index.html` 파일이 `public` 폴더가 아닌 프로젝트 루트 경로에 위치하고 있다. 이것은 vite의 의도이며, 추가적인 번들링 과정 없이 `index.html` 파일이 앱의 진입점이 되게끔 하기 위함이라고 한다. [자세한 설명](https://vitejs-kr.github.io/guide/#index-html-and-project-root)
@@ -86,7 +83,7 @@ Vite의 **TypeScript** 컴파일링은 **Esbuild**를 통해 진행하고, **Typ
 
 이를 지원하기 위해서 `tsconfig.json` 의 `compilerOptions` 에서 `"isolatedModules": true` 로 설정해주면 된다. 해당 설정으로 위와 같은 상황에서 작동하지 않는 기능들에 대해 경고할 수 있게 된다.
 
-![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/d0e45a56-6109-4dc4-8d78-25d1204cbfdb/Untitled.png)
+<img src="/vite4.png" alt="Vite">
 
 ## CSS
 
