POST: Vite update

--- a/_posts/2022-10-06-vite.md
+++ b/_posts/2022-10-06-vite.md
@@ -21,7 +21,7 @@ Vite는 프랑스어로 빠르다라는 뜻이 있다. 웹 어플리케이션의
 
 <img src="/vite1.png" alt="Vite">
 <img src="/vite2.png" alt="Vite">
-출처 - Vite 공식 문서
+_Vite 공식 문서_
 
 # 🔨 Vite로 React 프로젝트 구성해보기
 
@@ -50,8 +50,8 @@ $ yarn create vite project-name --template react-ts
 | lit        | lit-ts     |
 | svelte     | svelte-ts  |
 
-<img src="/vite3.png" alt="Vite">
-설치 후, 프로젝트 구조
+<img src="/vite3.png" alt="Vite" style="width: 250px;">
+_설치 후, 프로젝트 구조_
 
 `create-vite` 를 통해 설치 된 프로젝트 구조를 살펴보면, `index.html` 파일이 `public` 폴더가 아닌 프로젝트 루트 경로에 위치하고 있다. 이것은 vite의 의도이며, 추가적인 번들링 과정 없이 `index.html` 파일이 앱의 진입점이 되게끔 하기 위함이라고 한다. [자세한 설명](https://vitejs-kr.github.io/guide/#index-html-and-project-root)
 
@@ -83,7 +83,7 @@ Vite의 **TypeScript** 컴파일링은 **Esbuild**를 통해 진행하고, **Typ
 
 이를 지원하기 위해서 `tsconfig.json` 의 `compilerOptions` 에서 `"isolatedModules": true` 로 설정해주면 된다. 해당 설정으로 위와 같은 상황에서 작동하지 않는 기능들에 대해 경고할 수 있게 된다.
 
-<img src="/vite4.png" alt="Vite">
+<img src="/vite4.png" alt="Vite" style="width: 400px;">
 
 ## CSS
 
